# rust-rocket-app-sample

./: .gitignore  Cargo.toml  README.md  Rocket Mongo API.postman_collection.json  docker-compose.yaml
app/: .env  Cargo.toml  Dockerfile
app/src/: main.rs
app/src/api/: user_api.rs
app/src/repository/: mongodb_repo.rs
app/tests/: functional_tests.rs
loadtest/: Cargo.toml
loadtest/src/: main.rs
prometheus/: prometheus.yml
