[package]
name = "rocket-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"]}
rocket_prometheus = "0.10.0-rc.3"
bson = "2.7.0"
serde = "1.0.192"
serde-helpers = "0.1.0"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = [ "sync" ]
